contracts/orotitan-equity/v2/OROTITAN_DCF_TIMING_AUTHORITY_V1_FREEZE_V1.0.md
# OROTITAN_DCF_TIMING_AUTHORITY_V1 — FREEZE V1.0

**Project:** OroTitan Equity Research  
**Authority type:** Global valuation-methodology timing authority  
**Status:** FROZEN — V1.0  
**Freeze date:** 2026-09-20  
**Scope:** DCF timing only  
**Methodology repair classification:** BLOCKING DETERMINISTIC CANONICAL-OUTPUT DEFECT  
**Company calibration:** FORBIDDEN  
**Tesla-specific analytical content:** NONE

## 0. Authority boundary

This authority closes one previously unresolved global valuation convention: the mapping from dated forecast cash flows to discount exponents and present value.

It does not change the existing frozen economic basis:

```text
FCFF -> WACC
FCFE / OWNER EARNINGS -> COST_OF_EQUITY
EXPLICIT PERIOD -> FADE -> STABLE ECONOMICS
TERMINAL VALUE -> frozen terminal framework
POINT-IN-TIME -> preserved
```

It adds no company-specific assumption, score, threshold, hurdle, terminal-growth target, discount-rate target, or valuation conclusion.

Historical outputs are not calibration targets.

```text
CHOOSE TIMING TO REPRODUCE AN OLD COMPANY VALUE = FORBIDDEN
```

## 1. Canonical timing tuple

Every DCF execution must resolve exactly:

```text
TIME_ORIGIN
VALUATION_DATE
REFERENCE_PRICE_DATE
CASH_FLOW_DATES[]
YEAR_FRACTION_CONVENTION
DISCOUNT_EXPONENTS[]
STUB_STATUS
CASH_FLOW_BASIS
DISCOUNT_RATE_BASIS
TERMINAL_VALUE_DATE
EV_TO_EQUITY_BRIDGE_DATE where applicable
ECONOMIC_SHARE_COUNT_DATE
```

Any unresolved required member fails closed.

## 2. TIME_ORIGIN and VALUATION_DATE

```text
TIME_ORIGIN = VALUATION_DATE = DATA_CUTOFF
```

The DCF present-value clock starts at 00:00 UTC on the civil `DATA_CUTOFF` date solely to obtain deterministic whole-day differences. This UTC normalization is computational only; it does not convert the issuer's economic timezone.

`CALCULATION_DATE` is execution metadata and never changes discount exponents.

A rerun on a later calculation date with the same frozen inputs and same `DATA_CUTOFF` must return the same DCF.

Fail states:

```text
DCF_TIME_ORIGIN_MISMATCH
VALUATION_DATE_DATA_CUTOFF_MISMATCH
```

## 3. REFERENCE_PRICE_DATE

`REFERENCE_PRICE_DATE` remains distinct from the DCF time origin.

Rules:

```text
REFERENCE_PRICE_DATE <= VALUATION_DATE
numeric REFERENCE_PRICE -> valid REFERENCE_PRICE_DATE required
REFERENCE_PRICE_DATE does not alter DCF discount exponents
REFERENCE_PRICE_DATE does not move VALUATION_DATE
```

A non-trading-day cutoff may therefore use the last admitted market observation before the cutoff while the DCF remains valued at the cutoff.

This authority creates no new staleness threshold. Existing evidence, valuation-reliability and point-in-time rules determine whether an older reference price is admissible.

Fail states:

```text
REFERENCE_PRICE_DATE_MISSING
REFERENCE_PRICE_AFTER_VALUATION_DATE
REFERENCE_PRICE_STALENESS_UNRESOLVED
```

## 4. CASH_FLOW_DATES and period timing

Canonical DCF payment timing is:

```text
PERIOD_TIMING = END_OF_PERIOD
CASH_FLOW_DATE_i = exact forecast fiscal-period end date_i
```

Beginning-of-period and midpoint discounting are not permitted in V1.0.

Cash-flow dates must be strictly increasing and strictly later than `VALUATION_DATE`.

The issuer's actual fiscal calendar governs. Calendar 31 December must not be substituted for a non-calendar fiscal year. For 52/53-week calendars or irregular fiscal periods, exact forecast period-end dates are required.

Fail states:

```text
UNSUPPORTED_PERIOD_TIMING
CASH_FLOW_DATE_NOT_AFTER_VALUATION_DATE
CASH_FLOW_DATES_NOT_STRICTLY_INCREASING
FISCAL_PERIOD_DATE_UNRESOLVED
FISCAL_YEAR_MISMATCH_UNRESOLVED
```

## 5. YEAR_FRACTIONS and DISCOUNT_EXPONENTS

Canonical day-count convention:

```text
YEAR_FRACTION_CONVENTION = ACT/365F
t_i = calendar_days(VALUATION_DATE, CASH_FLOW_DATE_i) / 365
PV_i = CF_i / (1 + r)^t_i
```

Leap years use the actual numerator and the fixed denominator 365. A 366-day interval therefore has exponent `366/365`.

No 30/360, ACT/ACT, whole-year integer exponent, midpoint exponent, or analyst-selected exponent is allowed.

No intermediate rounding is allowed. Presentation may round only after the full calculation.

Fail states:

```text
UNSUPPORTED_YEAR_FRACTION_CONVENTION
NONFINITE_DISCOUNT_EXPONENT
INTERMEDIATE_ROUNDING_AS_INPUT
```

## 6. STUB_PERIODS

The first forecast interval always begins at `VALUATION_DATE`.

If the next forecast fiscal-period end is not one full modeled period after `VALUATION_DATE`, the first interval is a stub.

Canonical rule:

```text
FIRST_FORECAST_PERIOD_START = VALUATION_DATE
FIRST_FORECAST_CASH_FLOW = cash flow economically attributable only to the post-origin stub
AUTOMATIC PRORATION OF A FULL-YEAR CASH FLOW = FORBIDDEN
SILENT OMISSION OF THE STUB = FORBIDDEN
```

The valuation model must support the stub from actual subannual evidence or an explicit forecast construction. If it cannot, the DCF is not deterministically executable.

Subsequent forecast intervals must begin on the preceding forecast payment date.

Fail states:

```text
STUB_CASH_FLOW_UNSUPPORTED
STUB_FULL_YEAR_AUTOPRORATION_FORBIDDEN
FORECAST_PERIOD_CHAIN_BROKEN
```

## 7. FCFF

For enterprise DCF:

```text
CASH_FLOW_BASIS = FCFF
DISCOUNT_RATE_BASIS = WACC
DCF_PRESENT_VALUE = ENTERPRISE_VALUE at VALUATION_DATE
```

Any FCFF/cost-of-equity mismatch or mixed-basis stream fails closed.

Fail states:

```text
FCFF_DISCOUNT_RATE_BASIS_MISMATCH
MIXED_CASH_FLOW_BASIS
```

## 8. FCFE

For direct equity DCF:

```text
CASH_FLOW_BASIS = FCFE
DISCOUNT_RATE_BASIS = COST_OF_EQUITY
DCF_PRESENT_VALUE = EQUITY_VALUE at VALUATION_DATE
```

The ordinary FCFF enterprise-to-equity bridge must not be applied a second time.

Fail states:

```text
FCFE_DISCOUNT_RATE_BASIS_MISMATCH
EQUITY_DCF_EV_BRIDGE_FORBIDDEN
```

## 9. OWNER_EARNINGS

When Owner Earnings are used as an equity cash-flow valuation basis:

```text
CASH_FLOW_BASIS = OWNER_EARNINGS
DISCOUNT_RATE_BASIS = COST_OF_EQUITY
DCF_PRESENT_VALUE = EQUITY_VALUE at VALUATION_DATE
```

If Owner Earnings cannot be supportably bounded under the frozen forensic method, timing determinism does not make the valuation assessable.

Fail states:

```text
OWNER_EARNINGS_DISCOUNT_RATE_BASIS_MISMATCH
OWNER_EARNINGS_BASIS_UNSUPPORTED
EQUITY_DCF_EV_BRIDGE_FORBIDDEN
```

## 10. TERMINAL_VALUE_TIMING

The terminal value is valued at the end of the final explicit/fade forecast period.

```text
TERMINAL_VALUE_DATE = CASH_FLOW_DATE_N
TV_N = CF_(N+1) / (r - g) where the frozen perpetuity framework is applicable
CF_(N+1) = terminal-basis cash flow one period after CF_N under stable economics
PV(TV) = TV_N / (1 + r)^t_N
t_N = ACT/365F(VALUATION_DATE, TERMINAL_VALUE_DATE)
```

The terminal value and the final explicit cash flow therefore share the same discount exponent.

No extra one-year discount, midpoint adjustment, beginning-of-period adjustment, or exit-multiple timing substitution is permitted.

The terminal cash-flow basis must match the DCF basis and `r > g` must hold for a perpetuity-growth terminal value.

Fail states:

```text
TERMINAL_VALUE_DATE_MISMATCH
TERMINAL_BASIS_MISMATCH
TERMINAL_G_NOT_LESS_THAN_R
TERMINAL_STABLE_ECONOMICS_UNRESOLVED
```

## 11. EV_TO_EQUITY_BRIDGE

Only an FCFF enterprise DCF uses the ordinary EV-to-equity bridge.

```text
BRIDGE_DATE = VALUATION_DATE
EQUITY_VALUE_t0 = ENTERPRISE_VALUE_t0 + NET_EQUITY_BRIDGE_ADJUSTMENT_t0
```

The bridge adjustment must reflect the frozen EV-bridge definitions for debt, lease debt where applicable, preferred claims, NCI, pension/debt-like items, contingent consideration, excess cash and non-operating investments.

Bridge items are point-in-time claims/assets. They are not discounted as forecast cash flows.

If the latest reported balance-sheet date differs from the valuation date, the analyst must explicitly reconcile/roll the material bridge to the valuation date using only information available by `DATA_CUTOFF`. An unreconciled material date mismatch blocks the DCF.

Fail states:

```text
EV_BRIDGE_REQUIRED_FOR_FCFF
EV_BRIDGE_DATE_MISMATCH
EV_BRIDGE_ROLLFORWARD_UNRESOLVED
EQUITY_DCF_EV_BRIDGE_FORBIDDEN
```

## 12. PER_SHARE_TIMING

Per-share intrinsic value uses the economic share count at the valuation date.

```text
SHARE_COUNT_DATE = VALUATION_DATE
INTRINSIC_VALUE_PER_SHARE = EQUITY_VALUE_t0 / ECONOMIC_SHARE_COUNT_t0
```

Weighted-average diluted shares used for EPS are not automatically a valid point-in-time denominator.

Options, RSUs, convertibles, issuance, buybacks and other dilution must be handled consistently with the frozen share-count method. A future dilution effect already modeled in cash flows or claims must not be double counted in the denominator.

Fail states:

```text
PER_SHARE_DATE_MISMATCH
ECONOMIC_SHARE_COUNT_UNRESOLVED
NONPOSITIVE_ECONOMIC_SHARE_COUNT
DILUTION_DOUBLE_COUNT_UNRESOLVED
```

## 13. Deterministic reference vectors

All values below are synthetic controls. They are not company evidence and must not be calibrated to any historical valuation.

### R1 — FCFF, stub, EV bridge

```text
VALUATION_DATE = 2026-09-19
CF1 = 100.0 at 2026-12-31
CF2 = 120.0 at 2027-12-31
WACC = 0.10
TERMINAL_G = 0.03
NET_EQUITY_BRIDGE_ADJUSTMENT = -150.0
ECONOMIC_SHARE_COUNT = 10.0

t1 = 0.2821917808219178
t2 = 1.2821917808219179
PV_CF1 = 97.3462720337052
PV_CF2 = 106.19593312767839
TV = 1765.7142857142858
PV_TV = 1562.5973017358392
ENTERPRISE_VALUE = 1766.1395068972229
EQUITY_VALUE = 1616.1395068972229
PER_SHARE_VALUE = 161.6139506897223
```

### R2 — FCFE, irregular first stub

```text
VALUATION_DATE = 2027-01-15
CF1 = 40.0 at 2027-06-30
CF2 = 55.0 at 2028-06-30
COST_OF_EQUITY = 0.12
TERMINAL_G = 0.02
ECONOMIC_SHARE_COUNT = 5.0

t1 = 0.4547945205479452
t2 = 1.4575342465753425
PV_CF1 = 37.99057828118631
PV_CF2 = 46.62573981939283
TV = 561.0000000000001
PV_TV = 475.582546157807
EQUITY_VALUE = 560.1988642583862
PER_SHARE_VALUE = 112.03977285167723
```

### R3 — Owner Earnings, leap-year numerator

```text
VALUATION_DATE = 2027-12-31
CF1 = 30.0 at 2028-12-31
COST_OF_EQUITY = 0.09
TERMINAL_G = 0.025

t1 = 1.0027397260273974
PV_CF1 = 27.5164382915453
TV = 473.076923076923
PV_TV = 433.91306536667577
EQUITY_VALUE = 461.42950365822105
```

Regression comparisons use a numeric tolerance of `1e-12 * max(1, abs(expected))`; no fixture may be changed to match a company result.

## 14. Adversarial acceptance matrix

The frozen implementation must prove at minimum:

```text
T01 valuation date != data cutoff -> FAIL
T02 reference price date after valuation date -> FAIL
T03 cash-flow date at/before origin -> FAIL
T04 non-increasing payment dates -> FAIL
T05 broken forecast period chain -> FAIL
T06 unsupported/autoprorated stub -> FAIL
T07 FCFF + cost of equity -> FAIL
T08 FCFE + WACC -> FAIL
T09 Owner Earnings + WACC -> FAIL
T10 equity DCF + EV bridge -> FAIL
T11 FCFF without valuation-date EV bridge -> FAIL
T12 terminal date != final cash-flow date -> FAIL
T13 g >= r -> FAIL
T14 bridge date != valuation date -> FAIL
T15 share-count date != valuation date -> FAIL
T16 nonpositive share count -> FAIL
T17 unresolved fiscal calendar -> FAIL
T18 historical-output calibration flag -> FAIL
T19 ACT/365F leap interval -> exact 366/365
T20 calculation-date movement -> no output change
T21 R1 exact reference outputs -> PASS
T22 R2 exact reference outputs -> PASS
T23 R3 exact reference outputs -> PASS
T24 two independent implementations -> numerically equivalent
```

Required final state:

```text
REGRESSION = PASS
INDEPENDENT_IMPLEMENTATION_EQUIVALENCE = PASS
UNRESOLVED_POLICY_BRANCHES = 0
```

## 15. Contract dependency resolution

This authority is an additive higher-order valuation convention for the previously unspecified timing dimension.

Existing authorities remain unchanged in meaning:

```text
analysis standard -> economic DCF framework and basis matching
V2 process -> stage sequencing, point-in-time and immutable run pins
V2 pilotage -> exact run routing
V2 Deep Dive -> Valuation consumes frozen valuation policy/conventions
integration -> projects certified outputs, never re-values
I2 / I3-B -> unchanged
```

A run created before this authority was pinned must never be rebound in place.

## 16. Controlled same-cutoff methodology replay

A controlled successor run is permitted only to repair a run whose output depends on this newly frozen convention.

`SUCCESSOR` is lineage, not a legal `RUN_TYPE`.

For an unpublished parent that has no current canonical snapshot:

```text
LEGAL_RUN_TYPE = INITIAL
PARENT_RUN_ID = exact predecessor RUN_ID
BASELINE_SNAPSHOT_ID = NULL
DATA_CUTOFF = parent DATA_CUTOFF
CONTRACT_SET = newly frozen Contract Set
```

For a parent with a valid canonical current snapshot, ordinary frozen REFRESH rules govern instead.

Same-cutoff replay rules:

```text
PARENT RUN = immutable
PARENT CONTRACT SET = immutable
PARENT VALUATION OUTPUTS = historical only, not successor analytical authority
RESEARCH / FUNDAMENTALS inputs may cross runs only through explicit hash-verified lineage and REVALIDATES / DERIVED_FROM edges
VALUATION outputs and VALUATION_LOCK from the parent may not be revalidated across this methodology boundary
FIRST ANALYTICAL PHASE = VALUATION only after exact upstream non-valuation inputs are revalidated into the successor
NO NEW POST-CUTOFF EVIDENCE
NO NEW FUNDAMENTAL JUDGMENT
NO CALIBRATION TO PARENT VALUATION
CERTIFICATION / INTEGRATION remain downstream work and are not executed by the governance-repair workstream
```

If the upstream non-valuation artifacts cannot be revalidated without analytical change, the successor must route to the earliest affected phase rather than force a Valuation-only replay.

## 17. Parent firewall

A methodology repair must not mutate an existing run's immutable fields:

```text
run_id
entry_path
canonical_mode
run_type
data_cutoff
process_version
pilotage_contract_version
contract_pins
contract_set_sha256
```

No historical Valuation Lock is deleted or rewritten. No new Valuation Lock is created by the governance-repair workstream.

## 18. Status

```text
GLOBAL_DCF_TIMING_AUTHORITY = FROZEN
VERSION = 1.0
UNRESOLVED_POLICY_BRANCHES = 0
COMPANY_CALIBRATION = FORBIDDEN
```
